[package]
name = "akt-quickjs"
version = "0.1.0"
authors = ["akitasummer <akitasummer@outlook.com>"]
edition = "2021"

[lib]
name = "lib"
path = "src/lib/mod.rs"

[dependencies]
unic-ucd = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
byteorder = "1"
linked_hash_set = "0.1.3"
